assert-struct/tests/snapshots/comparison__comparison_pattern.snap
---
source: assert-struct/tests/comparison.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/comparison_errors/comparison_pattern.rs:18:14
   |
18 |         age: > 30,
   |              ^^^^ got 25
